--- a/adminside/templates/allblog.html
+++ b/adminside/templates/allblog.html
@@ -96,6 +96,8 @@
                                                 <th>Header</th>
                                                 <th>Description</th>
                                                 <th>Date</th>
+                                                <th>Technology</th>
+                                                <th>Name</th>
                                                 <th>Image</th>
                                                 <th>Edit</th>
                                                 <th>Delete</th>
@@ -107,6 +109,8 @@
                                                 <td>{{i.header}}</td>
                                                 <td>{{i.description}}</td>
                                                 <td>{{i.date}}</td>
+                                                <td>{{i.technology}}</td>
+                                                <td>{{i.name}}</td>
                                                 <td><img src="{{i.image.url}}" style="height:100px; width:100px"></td>
                                                 <td><a href="editblog/{{i.id}}"> <button type="submit" class="btn btn-cyan btn-sm">Edit</button></a></td>
                                                 <td><a href="deleteblog/{{i.id}}"><button type="submit" class="btn btn-danger btn-sm">Delete</button></a></td>
