--- a/training/templates/about.html
+++ b/training/templates/about.html
@@ -30,25 +30,27 @@
 </header>
 
 
+
 <section class="about_us">
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-7 col-lg-7">
                 <div class="about_title">
                     <span>About Us</span>
-                    <h2>The most gorgeous online training are built at Way to Code.</h2>
+                    <h2>The most gorgeous online training at Way to Code.</h2>
                  </div>
             </div>
             <div class="col-12 col-sm-12 col-md-5 col-lg-5 p-0">
                 <div class="banner_about">
-                    <img src="{% static 'images/banner/about_thinking.jpg' %}" alt="" class="img-fluid" style="width:500px;">
+                    <img src="{% static 'images/banner/about_thinking.jpg' %}" alt="" class="img-fluid">
                  </div>
             </div>
         </div>
+        <br/><br/><br/><br/><br/><br/>
         <div class="row about_content_wrapper">
             <div class="col-12 col-sm-12 col-md-5 col-lg-5 p-0">
                 <div class="about_banner_down">
-                    <img src="{% static 'images/banner/about_banner_2.jpg' %}" alt="" class="img-fluid" style="height:400px;">
+                    <img src="{% static 'images/banner/new banner/about - 1-02-01.png' %}" alt="" class="img-fluid">
                  </div>
             </div>
             <div class="col-12 col-sm-12 col-md-7 col-lg-7">
