--- a/training/templates/footer.html
+++ b/training/templates/footer.html
@@ -7,6 +7,10 @@
                     <div class="footer_single_col footer_intro">
                         <img src="{% static 'images/logo2.png' %}" alt="" class="f_logo">
                     </div>
+
+                    <div class="footer_single_col footer_intro">
+                        <a href="https://play.google.com/store/apps/details?id=waytocode"><img src="{% static 'images/appstore.jpg' %}" alt="" class="f_logo"></a>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
                     <div class="footer_single_col">
@@ -36,6 +40,7 @@
                         </ul>
                     </div>
                 </div>
+
                  <div class="col-12 col-md-12 col-lg-12">
                     <div class="copyright">
                         <a target="_blank" href="https://waytocode.in/">Way To Code</a>
