--- a/training/templates/footer_home.html
+++ b/training/templates/footer_home.html
@@ -27,6 +27,10 @@
                         <img src="{% static 'images/logo2.png' %}" alt="" class="f_logo">
 
                     </div>
+                     <div class="footer_single_col footer_intro">
+                        <a href="https://play.google.com/store/apps/details?id=waytocode"><img src="{% static 'images/appstore.jpg' %}" alt="" class="f_logo"></a>
+                    </div>
+
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
                     <div class="footer_single_col">
