--- a/website/templates/digitalmarketing.html
+++ b/website/templates/digitalmarketing.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/main services/digitalmarketing1.jpg' %}" alt="Thumb" height="400px;">
+                        <img src="{% static 'assets/img/main services/Digital marketing-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <h2>Digital Marketing</h2>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 pull-right ">
-                        <img src="{% static 'assets/img/main services/digital marketing.png' %}" alt="Thumb">
+                        <img src="{% static 'assets/img/main services/digimarketing.jpg' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <p>{{i.description_second}}</p>
@@ -227,7 +227,6 @@
                                 <img src="{% static 'assets/img/main services/content.jpg' %}" height="483px;" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/main services/content.jpg" class="item popup-link">
-                                        <i class="fa fa-camera"></i>
                                     </a>
                                 </div>
                             </div>
