--- a/website/templates/preheader.html
+++ b/website/templates/preheader.html
@@ -8,7 +8,10 @@
                                 <span><i class="fas fa-envelope-open"></i> Email</span>Info@waytocode.com
                             </li>
                             <li>
-                                <span><i class="fas fa-phone"></i> Contact</span>++91 7976664814 +919461262751
+                                <span><i class="fas fa-phone"></i> Contact</span>+91 7976664814
+                            </li>
+                            <li>
+                                <span><i class="fab fa-whatsapp"></i> Whatsapp</span>+919461262751
                             </li>
                         </ul>
                     </div>
