--- a/website/templates/web_footer.html
+++ b/website/templates/web_footer.html
@@ -37,6 +37,8 @@
                                 <li>
                                     <a href="{% url 'webcontact' %}">Contact</a>
                                 </li>
+                                <img src="{% static 'assets/img/iso2.jpg' %}" height="100px;" alt="Logo">
+                                <a href="https://play.google.com/store/apps/details?id=waytocode"> <img src="{% static 'assets/img/appstore.jpg' %}" height="60px;" alt="Logo"></a>
                             </ul>
                         </div>
                     </div>
