--- a/website/templates/webdevelopment.html
+++ b/website/templates/webdevelopment.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/main services/web development1.jpg' %}" alt="Thumb" height="400px;">
+                        <img src="{% static 'assets/img/main services/web development-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <h2>Web Development</h2>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 pull-right ">
-                        <img src="{% static 'assets/img/main services/web development.png' %}" alt="Thumb" height="400px;">
+                        <img src="{% static 'assets/img/main services/web development-02-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <p>
@@ -147,7 +147,6 @@
                                 <img src="{% static 'assets/img/main services/php.png' %}" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/main services/php.png" class="item popup-link">
-                                        <i class="fa fa-camera"></i>
                                     </a>
                                 </div>
                             </div>
@@ -189,7 +188,6 @@
                                 <img src="{% static 'assets/img/main services/asp.net.png' %}" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/main services/asp.net.png" class="item popup-link">
-                                        <i class="fa fa-camera"></i>
                                     </a>
                                 </div>
                             </div>
@@ -229,7 +227,6 @@
                                 <img src="{% static 'assets/img/main services/java.png' %}" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/main services/java.png" class="item popup-link">
-                                        <i class="fa fa-camera"></i>
                                     </a>
                                 </div>
                             </div>
@@ -268,7 +265,6 @@
                                 <img src="{% static 'assets/img/main services/python.png' %}" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/main services/python.png" class="item popup-link">
-                                        <i class="fa fa-camera"></i>
                                     </a>
                                 </div>
                             </div>
@@ -310,7 +306,6 @@
                                 <img src="{% static 'assets/img/main services/ror.png' %}" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/main services/ror.png" class="item popup-link">
-                                        <i class="fa fa-camera"></i>
                                     </a>
 
                                 </div>
