--- a/adminside/templates/addtraining.html
+++ b/adminside/templates/addtraining.html
@@ -120,6 +120,12 @@
                                             <input type="file" class="form-control" name="image" id="image" required>
                                         </div>
                                     </div>
+                                    <div class="form-group row">
+                                        <label for="link" class="col-sm-3 text-right control-label col-form-label">Link:</label>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="link" id="link" required>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="border-top" align="center">
                                 <div class="card-body">
