--- a/adminside/templates/alltraining.html
+++ b/adminside/templates/alltraining.html
@@ -96,6 +96,7 @@
                                                 <th>Name</th>
                                                 <th>Description</th>
                                                 <th>Image</th>
+                                                <th>Link</th>
                                                 <th>Edit</th>
                                                 <th>Delete</th>
                                             </tr>
@@ -106,6 +107,7 @@
                                                 <td>{{i.name}}</td>
                                                 <td>{{i.description}}</td>
                                                 <td><img src="{{i.image.url}}" style="height:100px; width:100px"></td>
+                                                <td>{{i.link}}</td>
                                                 <td><a href="edittraining/{{i.id}}"> <button type="submit" class="btn btn-cyan btn-sm">Edit</button></a></td>
                                                 <td><a href="deletetraining/{{i.id}}"><button type="submit" class="btn btn-danger btn-sm">Delete</button></a></td>
                                             </tr>
