--- a/adminside/templates/editblog.html
+++ b/adminside/templates/editblog.html
@@ -121,6 +121,18 @@
                                         </div>
                                     </div>
                                     <div class="form-group row">
+                                        <label for="technology" class="col-sm-3 text-right control-label col-form-label">Technology:</label>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="technology" id="technology" value="{{blog.technology}}" required>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="name" class="col-sm-3 text-right control-label col-form-label">Name:</label>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="name" id="name"  value="{{blog.name}}" required>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
                                         <label for="image" class="col-sm-3 text-right control-label col-form-label">Image:</label>
                                         <div class="col-sm-6">
                                             <input type="file" class="form-control" name="image" id="image" required>
