--- a/adminside/templates/sidebar.html
+++ b/adminside/templates/sidebar.html
@@ -11,66 +11,67 @@
                                 <li class="sidebar-item"><a href="{% url 'allservices' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Service</span></a></li>
                             </ul>
                         </li>
-                         <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Maximum Possibilities</span></a>
+                         <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-clipboard"></i><span class="hide-menu">Maximum Possibilities</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addpossibilty' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Possibility</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allpossibility' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Possibility </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Reviews</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-message-draw"></i><span class="hide-menu">Reviews</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addreview' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Review</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allreview' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Reviews </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Team</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Team</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addteam' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Team</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allteam' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Team </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Portfolio</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-folder-multiple-image"></i><span class="hide-menu">Portfolio</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addportfolio' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Portfolio</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allportfolio' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Portfolio </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Technology</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-cloud"></i><span class="hide-menu">Technology</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addtechnology' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Technology</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'alltechnology' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Technology </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Carrer</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-key"></i><span class="hide-menu">Carrer</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addcareer' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Carrer</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allcareer' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Carrer </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Training</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-library"></i><span class="hide-menu">Training</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addtraining' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Training</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'alltraining' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Training </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Student Review</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-message"></i><span class="hide-menu">Student Review</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addstudentreview' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Review</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allstudentreview' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Review </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Course</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-file-document"></i><span class="hide-menu">Course</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addcourse' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Course</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allcourse' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Course </span></a></li>
                             </ul>
                         </li>
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Blog</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-camera"></i><span class="hide-menu">Blog</span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="{% url 'addblog' %}" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu">Add Blog</span></a></li>
                                 <li class="sidebar-item"><a href="{% url 'allblog' %}" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu">All Blog </span></a></li>
                             </ul>
                         </li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'adminwebcontact' %}" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Contact</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'logout' %}" aria-expanded="false"><i class="mdi mdi-power"></i><span class="hide-menu">Logout</span></a></li>
                     </ul>
                 </nav>
