--- a/training/static/css/style.css
+++ b/training/static/css/style.css
@@ -2741,7 +2741,7 @@ footer {
           color: #ffffff;
           border-color: #092ace; }
 .header_3 .intro_wrapper {
-  background: url("../images/banner/banner_3.png") no-repeat center center;
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center;
   min-height: 990px;
   background-size: cover;
   position: relative;
@@ -3535,7 +3535,7 @@ footer {
     width: 100%; }
 
 .header_inner .intro_wrapper {
-  background: url("../images/banner/banner_3.png") no-repeat center center;
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center;
   min-height: 300px;
   background-size: cover;
   position: relative;
@@ -3588,7 +3588,7 @@ footer {
 
 /*=======[ Blog Signle ]========*/
 .blog_page .intro_wrapper {
-  background: url("../images/banner/inner_banner_2.jpg") no-repeat center center !important; }
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center !important; }
 
 .blog_wrapper {
   padding: 130px 0;
@@ -4352,7 +4352,7 @@ footer {
               left: -30px; }
 
 .contact_page .intro_wrapper {
-  background: url("../images/banner/inner_banner_3.jpg") no-repeat center center !important; }
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center !important; }
 
 .contact_info_wrapper {
   padding: 120px 0; }
@@ -4487,7 +4487,7 @@ footer {
   width: 100%; }
 
 .about_page .intro_wrapper {
-  background: url("../images/banner/about_banner.jpg") no-repeat center center !important; }
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center !important; }
 
 .about_us {
   position: relative;
@@ -4529,7 +4529,7 @@ footer {
     .about_us .about_content_wrapper .about_banner_down {
       padding: 0 80px; }
     .about_us .about_content_wrapper .about_content {
-      padding-top: 200px; }
+       }
       .about_us .about_content_wrapper .about_content p {
         padding-bottom: 20px;
         margin: 0; }
@@ -4687,7 +4687,7 @@ footer {
     color: #6a7a83 !important; }
 
 .become_a_teacher .intro_wrapper {
-  background: url("../images/banner/inner_banner_1.jpg") no-repeat center center !important; }
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center !important; }
 
 .become_a_instructor {
   padding: 130px 0; }
@@ -5022,7 +5022,7 @@ footer {
       padding: 15px 0 0; }
 
 .courses_page .intro_wrapper {
-  background: url("../images/banner/inner_banner_4.jpg") no-repeat center center !important; }
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center !important; }
 .courses_page .popular_courses {
   padding: 100px 0 100px; }
 
@@ -5659,7 +5659,7 @@ footer {
           color: #ff5a2c; }
 
 .event_page .intro_wrapper {
-  background: url("../images/banner/inner_banner_5.jpg") no-repeat center center !important; }
+  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center !important; }
 
 .event_details_wrapper {
   padding: 130px 0 100px; }
