--- a/website/templates/appdevelopment.html
+++ b/website/templates/appdevelopment.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/main services/app development.png' %}" alt="Thumb" height="400px;">
+                        <img src="{% static 'assets/img/main services/app development-01.png' %}" alt="Thumb" >
                     </div>
                     <div class="col-md-6 info">
                         <h2>App Development</h2>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 pull-right ">
-                        <img src="{% static 'assets/img/main services/app development2.jpeg' %}" alt="Thumb">
+                        <img src="{% static 'assets/img/main services/app development-02-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <p>{{i.description_second}}</p>
@@ -141,7 +141,7 @@
                     <div class="item">
                         <div class="col-md-5">
                             <div class="thumb">
-                                <img src="{% static 'assets/img/main services/android.png' %}" alt="Thumb">
+                                <img src="{% static 'assets/img/main services/android.png' %}" height="400px;" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/courses/f1.jpg" class="item popup-link">
 
@@ -183,7 +183,7 @@
                     <div class="item">
                         <div class="col-md-5">
                             <div class="thumb">
-                                <img src="{% static 'assets/img/main services/flutter.png' %}" alt="Thumb" height="400px;">
+                                <img src="{% static 'assets/img/main services/flutter.png' %}" height="400px;" alt="Thumb" height="400px;">
                                 <div class="live-view">
                                     <a href="assets/img/main services/flutter.png" class="item popup-link">
                                     </a>
@@ -222,7 +222,7 @@
                     <div class="item">
                         <div class="col-md-5">
                             <div class="thumb">
-                                <img src="{% static 'assets/img/main services/ios.jpg' %}" alt="Thumb">
+                                <img src="{% static 'assets/img/main services/ios.jpg' %}" height="400px;" alt="Thumb">
                                 <div class="live-view">
                                     <a href="assets/img/main services/ios.jpg" class="item popup-link">
                                     </a>
