--- a/website/templates/ceo.html
+++ b/website/templates/ceo.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 thumb">
-                    <img src="{% static 'assets/img/team/vinod.png' %}" width="500px;" alt="Thumb">
+                    <img src="{% static 'assets/img/team/vinod.jpg' %}" width="500px;" alt="Thumb">
                     <div class="desc">
                         <h4>Vinod Sonava</h4>
                         <span>CEO & Founder</span>
