--- a/website/templates/designservices.html
+++ b/website/templates/designservices.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/main services/web design1.jpg' %}" alt="Thumb">
+                        <img src="{% static 'assets/img/main services/design services-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <h2>Web Designing</h2>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 pull-right ">
-                        <img src="{% static 'assets/img/main services/web design2.jpg' %}" alt="Thumb">
+                        <img src="{% static 'assets/img/main services/design services-02-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <p>{{i.description_second}}</p>
