--- a/website/templates/testing.html
+++ b/website/templates/testing.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/main services/QA testing and content writing.png' %}" alt="Thumb">
+                        <img src="{% static 'assets/img/main services/QA-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <h2>Software Testing</h2>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 pull-right ">
-                        <img src="{% static 'assets/img/main services/testing1.png' %}" alt="Thumb" height="400px;">
+                        <img src="{% static 'assets/img/main services/QA-2-01.png' %}" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <p>{{i.description_second}}</p>
@@ -144,7 +144,6 @@
                                 <img src="{% static 'assets/img/main services/qa1.jpg' %}" alt="Thumb" height="483px;">
                                 <div class="live-view">
                                     <a href="assets/img/main services/qa1.jpg" class="item popup-link">
-                                        <i class="fa fa-camera"></i>
                                     </a>
                                 </div>
                             </div>
