--- a/website/templates/web_header.html
+++ b/website/templates/web_header.html
@@ -28,7 +28,6 @@
                             <ul class="dropdown-menu">
                                 <li><a href="{% url 'about' %} ">About us</a></li>
                                 <li><a href="{% url 'ceo' %}">CEO & Founder</a></li>
-                                <li><a href="{% url 'webdesigning' %}">Way to Code gallary</a></li>
                                 <li><a href="{% url 'career' %}">Career</a></li>
                             </ul>
                         </li>
@@ -45,17 +44,17 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle active" data-toggle="dropdown" >Technologies</a>
                             <ul class="dropdown-menu">
-                                <li><a href="{% url 'python' %}">Python</a></li>
-                                <li><a href="{% url 'asp.net' %}">Asp .Net</a></li>
-                                <li><a href="{% url 'java' %}">Java</a></li>
-                                <li><a href="{% url 'php' %}">PHP</a></li>
-                                <li><a href="{% url 'ror' %}">ROR</a></li>
-                                <li><a href="{% url 'golang' %}">GOLANG</a></li>
-                                <li><a href="{% url 'android' %}">Android</a></li>
-                                <li><a href="{% url 'ios' %}">IOS</a></li>
-                                <li><a href="{% url 'angularjs' %}">Angular JS</a></li>
-                                <li><a href="{% url 'nodejs' %}">Node JS</a></li>
-                                <li><a href="{% url 'reactjs' %}">React JS</a></li>
+                                <li><a href="{% url 'webpython' %}">Python</a></li>
+                                <li><a href="{% url 'webasp.net' %}">Asp .Net</a></li>
+                                <li><a href="{% url 'webjava' %}">Java</a></li>
+                                <li><a href="{% url 'webphp' %}">PHP</a></li>
+                                <li><a href="{% url 'webror' %}">ROR</a></li>
+                                <li><a href="{% url 'webgolang' %}">GOLANG</a></li>
+                                <li><a href="{% url 'webandroid' %}">Android</a></li>
+                                <li><a href="{% url 'webios' %}">IOS</a></li>
+                                <li><a href="{% url 'webangularjs' %}">Angular JS</a></li>
+                                <li><a href="{% url 'webnodejs' %}">Node JS</a></li>
+                                <li><a href="{% url 'webreactjs' %}">React JS</a></li>
                             </ul>
                         </li>
                         <li>
