--- a/website/templates/webcontact.html
+++ b/website/templates/webcontact.html
@@ -135,48 +135,35 @@
                         <div class="heading">
                             <h3>Contact Us</h3>
                         </div>
-                        <form action="" method="POST" class="contact-form">
-                            <div class="col-md-12">
-                                <div class="row">
+                        <form action="{% url 'webcontact' %}" method="post">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-md-6">
                                     <div class="form-group">
-                                        <input class="form-control" id="name" name="name" placeholder="Name" type="text">
-                                        <span class="alert-error"></span>
+                                        <input class="form-control" placeholder="Name" type="text" name="name">
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="row">
+                                <div class="col-md-6">
                                     <div class="form-group">
-                                        <input class="form-control" id="email" name="email" placeholder="Email*" type="email">
-                                        <span class="alert-error"></span>
+                                        <input class="form-control" placeholder="Phone" type="text" name="phone">
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="row">
+                                <div class="col-md-12">
                                     <div class="form-group">
-                                        <input class="form-control" id="phone" name="phone" placeholder="Phone" type="text">
-                                        <span class="alert-error"></span>
+                                        <input class="form-control" placeholder="Email*" type="email" name="email">
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="row">
-                                    <div class="form-group comments">
-                                        <textarea class="form-control" id="comments" name="comments" placeholder="Tell Me About Courses *"></textarea>
+
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <textarea class="form-control" name="comments" rows="10" cols="80" placeholder="Message"></textarea>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="row">
-                                    <button type="submit" name="submit" id="submit">
-                                        Send Message <i class="fa fa-paper-plane"></i>
+                                <div class="col-md-12">
+                                    <button type="submit">
+                                        Send Message
                                     </button>
                                 </div>
-                            </div>
-                            <!-- Alert Message -->
-                            <div class="col-md-12 alert-notification">
-                                <div id="message" class="alert-msg"></div>
                             </div>
                         </form>
                     </div>
