--- a/website/templates/webindex.html
+++ b/website/templates/webindex.html
@@ -431,27 +431,28 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                             <h2>Let’s discuss more about your project</h2>
 
                         </div>
-                        <form action="#">
+                        <form action="{% url 'webcontact' %}" method="post">
+                            {% csrf_token %}
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="Name" type="text">
+                                        <input class="form-control" placeholder="Name" type="text" name="name">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="Phone" type="text">
+                                        <input class="form-control" placeholder="Phone" type="text" name="phone">
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="Email*" type="email">
+                                        <input class="form-control" placeholder="Email*" type="email" name="email">
                                     </div>
                                 </div>
 
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <textarea class="form-control" name="message" rows="10" cols="80" placeholder="Message"></textarea>
+                                        <textarea class="form-control" name="comments" rows="10" cols="80" placeholder="Message"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
