--- a/adminside/templates/alltrainingcontact.html
+++ b/adminside/templates/alltrainingcontact.html
@@ -106,8 +106,8 @@
                                                 <td>{{i.name}}</td>
                                                 <td>{{i.email}}</td>
                                                 <td>{{i.phone}}</td>
-                                                <td>{{i.description}}</td>
-                                                <td><a href="admindeletewebcontact/{{i.id}}"><button type="submit" class="btn btn-danger btn-sm">Delete</button></a></td>
+                                                <td>{{i.message}}</td>
+                                                <td><a href="admintrainingdeletewebcontact/{{i.id}}"><button type="submit" class="btn btn-danger btn-sm">Delete</button></a></td>
                                             </tr>
                                          {% endfor %}
                                         </tbody>
