--- a/adminside/templates/sidebar.html
+++ b/adminside/templates/sidebar.html
@@ -72,6 +72,7 @@
                             </ul>
                         </li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'adminwebcontact' %}" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Contact</span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'admintrainingcontact' %}" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Training Contact</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'logout' %}" aria-expanded="false"><i class="mdi mdi-power"></i><span class="hide-menu">Logout</span></a></li>
                     </ul>
                 </nav>
