--- a/training/static/css/style.css
+++ b/training/static/css/style.css
@@ -4352,7 +4352,7 @@ footer {
               left: -30px; }
 
 .contact_page .intro_wrapper {
-  background: url("../images/banner/new banner/all_banner2.jpg") no-repeat center center !important; }
+  background: url("../images/banner/inner_banner_3.jpg") no-repeat center center !important; }
 
 .contact_info_wrapper {
   padding: 120px 0; }
