--- a/training/templates/index.html
+++ b/training/templates/index.html
@@ -408,7 +408,7 @@ Working on a real project is a big thing in today's world. The training institut
                     </div>
                     <div class="blog_title">
                         <span>{{i.technology}}</span>
-                        <h3><a href="#" title="">{{i.header}}</a></h3>
+                        <h3><a href="{% url 'blogs' %}" title="">{{i.header}}</a></h3>
                         <div class="post_bloger">
                             <span>{{i.date}} - By </span> <span class="bloger_name">{{i.name}}</span>
                         </div>
