--- a/website/templates/angularjs.html
+++ b/website/templates/angularjs.html
@@ -67,7 +67,7 @@
 
     <!-- Start Breadcrumb
     ============================================= -->
-    <div class="breadcrumb-area shadow dark text-center bg-fixed text-light" style="background-image: url({% static 'assets/img/banner/21.jpg' %});">
+    <div class="breadcrumb-area shadow dark text-center bg-fixed text-light" style="background-image: url({% static 'assets/img/banner/2.png' %});">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/about.jpg' %}" alt="Thumb">
+                        <img src="{% static 'assets/img/technology/angularjs.jpg' %}" height="480px;" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                         <h2>AngularJS Development</h2>
@@ -111,14 +111,14 @@
     </div>
     <!-- End Asp.net development -->
 
-    <!-- Start Asp.net development
+    <!-- Start Asp.net developmentpx
     ============================================= -->
     <div class="about-area default-padding">
         <div class="container">
             <div class="row">
                 <div class="about-info">
                     <div class="col-md-6 pull-right ">
-                        <img src="{% static 'assets/img/about.jpg' %}" alt="Thumb">
+                        <img src="{% static 'assets/img/technology/angular2.png' %}" height="480px;" alt="Thumb">
                     </div>
                     <div class="col-md-6 info">
                        <p>
@@ -148,9 +148,6 @@
         <div class="container">
             <div class="row">
                 <div class="about-info">
-                    <div class="col-md-6 thumb">
-                        <img src="{% static 'assets/img/about.jpg' %}" alt="Thumb">
-                    </div>
                     <div class="col-md-6 info">
                         <div id="featured-courses" class="featured-courses-area left-details default-padding">
                          <div class="container">
@@ -162,7 +159,7 @@
                                      <div class="thumb">
                                         </div>
                                   </div>
-                        <div class="col-md-6 info">
+                        <div class="col-md-12 info">
                             <h2>
                                 <a href="#">BENEFITS OF ANGULARJS</a>
                             </h2>
