--- a/website/templates/webabout.html
+++ b/website/templates/webabout.html
@@ -262,7 +262,7 @@
             <div class="row">
                 <div class="video-info">
                     <div class="overlay-video">
-                        <a class="popup-youtube video-play-button" href="https://www.youtube.com/watch?v=8GQTt50izkg">
+                        <a class="popup-youtube video-play-button" href="{% static 'assets/img/waytocode_video.mp4' %}">
                             <i class="fa fa-play"></i>
                         </a>
                     </div>
